force-app/main/default/objects/Product2/fields/CustoProducao__c.field-meta.xml
<CustomField>
    <fullName>CustoProducao__c</fullName>
    <label>Custo de Produção</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>