force-app/main/default/objects/Product2/fields/HierarquiaProduto__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaProduto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Hierarquia do produto</description>
    <label>Hierarquia de Produto</label>
    <referenceTo>HierarquiaProduto__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>