force-app/main/default/objects/Product2/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>