force-app/main/default/objects/Product2/validationRules/Codigo_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_Obrigatorio</fullName>
    <active>true</active>
    <description>Deve ser fornecido um código de produto</description>
    <errorConditionFormula>ISBLANK( Codigo__c  )</errorConditionFormula>
    <errorDisplayField>Codigo__c</errorDisplayField>
    <errorMessage>Forneça o código do produto.</errorMessage>
</ValidationRule>