force-app/main/default/objects/Product2/validationRules/Nome_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Nome_Obrigatorio</fullName>
    <active>true</active>
    <description>Deve ser fornecido um nome.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Digite o nome do produto.</errorMessage>
</ValidationRule>