force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Codigo__c</columns>
    <columns>CustoProducao__c</columns>
    <columns>HierarquiaProduto__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>